--- a/argon-react-native-master/package.json
+++ b/argon-react-native-master/package.json
@@ -14,30 +14,31 @@
     "url": "git+https://github.com/creativetimofficial/argon-react-native.git"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.0.6",
     "@react-navigation/compat": "^5.0.0",
     "@react-navigation/drawer": "5.0.0",
     "@react-navigation/native": "^5.0.5",
     "@react-navigation/stack": "5.0.0",
     "@use-expo/font": "^2.0.0",
-    "expo": "^37.0.0",
-    "expo-asset": "~8.1.5",
-    "expo-font": "~8.1.0",
+    "expo": "^38.0.0",
+    "expo-asset": "~8.1.7",
+    "expo-font": "~8.2.1",
     "galio-framework": "^0.6.3",
     "prop-types": "^15.7.2",
-    "react": "16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react": "16.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-modal-dropdown": "^0.7.0",
-    "react-native-reanimated": "~1.7.0",
-    "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "~2.2.0",
+    "react-native-reanimated": "~1.9.0",
+    "react-native-safe-area-context": "~3.0.7",
+    "react-native-screens": "~2.9.0",
     "react-native-vector-icons": "^7.0.0",
+    "react-native-webview": "9.4.0",
     "react-refresh": "^0.8.2"
   },
   "devDependencies": {
-    "babel-preset-expo": "^8.2.1"
+    "babel-preset-expo": "^8.2.3"
   },
   "keywords": [
     "argon react native",
